k8s-deployments/03-image-updater/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-updater
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      nodePort: 80
      protocol: TCP
      targetPort: 80
