k8s-deployments/03-image-updater/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-updater
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: SPECIFIED_BY_OVERLAYS
            pathType: Prefix
            backend:
              service:
                name: SPECIFIED_BY_OVERLAYS
                port:
                  number: 3000
